# ChangeLog for net-misc/dhcpcd
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-misc/dhcpcd/ChangeLog,v 1.455 2015/05/05 13:20:12 williamh Exp $

*dhcpcd-6.8.2 (05 May 2015)

  05 May 2015; William Hubbs <williamh@gentoo.org> +dhcpcd-6.8.2.ebuild:
  version bump

  26 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> dhcpcd-6.6.7.ebuild:
  ia64 stable wrt bug #538418

  22 Apr 2015; Jeroen Roovers <jer@gentoo.org> dhcpcd-6.6.7.ebuild:
  Stable for PPC64 (bug #538418).

  17 Apr 2015; Mikle Kolyada <zlogene@gentoo.org> dhcpcd-6.6.7.ebuild:
  sparc stable wrt bug #538418

  27 Mar 2015; William Hubbs <williamh@gentoo.org> -dhcpcd-6.4.5.ebuild,
  -dhcpcd-6.5.0.ebuild, -dhcpcd-6.5.1.ebuild, -dhcpcd-6.6.6.ebuild:
  remove unstable versions

*dhcpcd-6.8.1 (27 Mar 2015)

  27 Mar 2015; William Hubbs <williamh@gentoo.org> +dhcpcd-6.8.1.ebuild:
  version bump

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> dhcpcd-6.6.7.ebuild:
  Stable for ppc, wrt bug #538418

  28 Feb 2015;  <tgall@gentoo.org> dhcpcd-6.7.1.ebuild:
  stable on arm64

  22 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> dhcpcd-6.6.7.ebuild:
  x86 stable wrt bug #538418

  17 Feb 2015; Markus Meier <maekke@gentoo.org> dhcpcd-6.6.7.ebuild:
  arm stable, bug #538418

  02 Feb 2015; Jeroen Roovers <jer@gentoo.org> dhcpcd-6.6.7.ebuild:
  Stable for HPPA (bug #538418).

  01 Feb 2015; Mikle Kolyada <zlogene@gentoo.org> dhcpcd-6.6.7.ebuild:
  amd64 stable wrt bug #538418

  30 Jan 2015; William Hubbs <williamh@gentoo.org> dhcpcd-6.7.1.ebuild,
  dhcpcd-9999.ebuild:
  Add the embedded use flag for #535960.

*dhcpcd-6.7.1 (30 Jan 2015)

  30 Jan 2015; Lars Wendler <polynomial-c@gentoo.org> -dhcpcd-6.6.0.ebuild,
  -dhcpcd-6.6.1.ebuild, -dhcpcd-6.6.2.ebuild, -dhcpcd-6.6.4.ebuild,
  -dhcpcd-6.6.5.ebuild, +dhcpcd-6.7.1.ebuild:
  Version bump. Removed old.

  10 Jan 2015; Tobias Klausmann <klausman@gentoo.org> dhcpcd-6.4.7.ebuild:
  Stable on alpha, bug 523900
