@@ -10,19 +10,21 @@ DIST dhcpcd-6.6.7.tar.bz2 158093 SHA256 43f93a0a536b93e26e4c7733582df7595d73aff9
 DIST dhcpcd-6.7.1.tar.bz2 162396 SHA256 cb65d3e783fa5484ed095bb940c3274a5a91d3ed4a9d9ae66a49d9637165bd98 SHA512 24c6fa296a169f4a8146b346947067e542993c8cee914fca7ebfcb1923b8c9f0af4df21b9df38a6ea2b67f393544f46356a6650d435ed42beb4d3783013cb15c WHIRLPOOL 4d78f601a775b1c2bc9c288f68ff3a3f6129bb6e2c8ab04a53cbd9ab3dff8485cb42051e6bd76d66af1ac2d3a9a92b20fa1eefc77f1a8aab2756cdac70e2364f
 DIST dhcpcd-6.8.1.tar.bz2 173030 SHA256 27b60cbf726a8319e6f1e7691132082c9cdac473317ea47cb093d0dd3d32af82 SHA512 b3ac554b40cfc3aa8c810f5579dd0c5f2c2aec870f142ac10b8a00cfd1c4934f171b12b5cc3197bf17761feba66e2ca463a9c2c3bb4e558e5bd1b033cebebae6 WHIRLPOOL a3a68c1bb8b12af657d7bb18ed37529b13b258d8afc07c84fa5e9a49b7469b450760be2c564b94192792f6bd9d73db514c130f62fab3935bf741bcda0b085469
 DIST dhcpcd-6.8.2.tar.bz2 175355 SHA256 a72187fe1f31553264571720d47ebf919cf484f04c2fa974e57a10e16a505cb2 SHA512 cef488618c2bab398adb4b5021745ca9a8319067400604d087cb2c62142449adc40f25a14d90c87147c9412ffa1a85e6253374e98fea2de8024c94e3771e1c41 WHIRLPOOL c1464776cbccc96513ad544408ef9156f755fb3c81903536628c7b16bf18d8e373afe395e1137e998980e56585d571aa7abaac8820164d8f013e82c1ae8adc99
+DIST dhcpcd-6.9.0.tar.bz2 176736 SHA256 1566a58ef785880c07762ff6c520e974cf42872be5fbb23b4520f4446b120a68 SHA512 bb02005ff54ad722961208be69f48c61fb72cf56c9ca89348f3e0973e96317b06b4eaf48412ec5e763c9e20bad6f38e06d520048f3412d3bf46716f5dfb671a6 WHIRLPOOL 450b89ff260cfef8e865d1f02b7aa7119d0e37a231d08577545d0091496cee370f5f9c2614e6d5ef2b9a99b412d909d3ed4711c7433b6de085b7dc62df84a4fb
 EBUILD dhcpcd-6.4.3.ebuild 3445 SHA256 ee9e740e2f7319d34f5ccdf2aff5a4b0f95f7c0009bb2ba731c8cf390a6f9b1a SHA512 5b68c33cc45e1765cd5d972f13f7bf7bcb4999d47948999c2322c7365782db79489eebcd6ce501496534ffc803fa092f3123bd2ea216d79dd7517ba00ad84ecf WHIRLPOOL 9acf74efd528158b11f68bcb846cc00e45a7f0f6de3bb495f494ecedfe2e17e3a5d8faecda921432f18105b601c3e7e84d96112b27e0fffbde80b2e64007dfac
 EBUILD dhcpcd-6.4.7.ebuild 3402 SHA256 846101acbfc9663fd6fe8c265fc9b04469cf62c63c495ce6106cd791197cdcad SHA512 00fd515223af61c373e6346536e51494f7ea973093442de7dc9bdc525909f7fd018ea6bffa06f245e65773724195b1459a55cc17a9dcd10146d973ee40e1b6fb WHIRLPOOL 133179fb52ef93ea1701f3f5a3699bffdd7b303bb3c8c69b63b83a1f7b110632b99c683e135ef8a9d0272eeb10c8c33475358c0e9f35a21ef0d31f6190e54fcd
 EBUILD dhcpcd-6.6.7.ebuild 3400 SHA256 26cd73d33725f4fc1f0c6db5b92c146f0d89d2edeb55addc13b8a3bbf087857e SHA512 fed93edd02b02b02ea833979688bf39e0b7e6a7c168a0f89c5be758b8d1118b43dfe1864b82b4e2117f57f63df4a2e736f7c96d2f041d057427bec01571f0bea WHIRLPOOL 3bb9524500321cc23c8cc80a93eb36561e58551db494ce0c494906fc5a64be158f5a95c971965a71ed635862fe879238d8b7de896b8d1273c0dfafe6391a34f6
 EBUILD dhcpcd-6.7.1.ebuild 3442 SHA256 b364d1fba21ddec1c0599e939e351b6673c238eceab1374d9be82c4213a235d3 SHA512 5f16cc139ab8e4cbe73f05ab40830cd183a4ac0d49c77d1fc1acb59e645e4774484cfbe37bc54b9cb69066645476cc751cddb95f86b901b6c52a92c9651c5c61 WHIRLPOOL 38788b775640c13a5e73fcd9949deed0a73249f6f8c9cbab35bf9d6d9b2323e0a0cf2cc2d2f01cc9019e1f7c53f6e1730558dca213ad253881753be73aa63b78
 EBUILD dhcpcd-6.8.1.ebuild 3446 SHA256 3eb866a839eb553cae8e6c190ac02f22987d51e81332de3c0d76d2a160b0111d SHA512 2350bad309f32383b224d6754c0e9b7b98dbc572926046d9b25df386ecf5d5c5308971e2f5240e0e801c96c70a6f633add7c0c209eb38da54b8583a60c143ae8 WHIRLPOOL 09e63cd6503ee140c69f6e6801efa5737f1e1645711497136b64300985a6d02f8ddb37d2429ac1baf050e7b3fd5476045ce8cbd381c8da2808c385715df4f52b
 EBUILD dhcpcd-6.8.2.ebuild 3446 SHA256 c9824ab049a1c7fb215ed2dc262a594b93e9e22835e0e5b6a1cf42f9de6a85d7 SHA512 337b314b5b98da7e0b4e0696e0b2fc44108b873a8f4484dd15ab0bea5768d553c9da825ab7cbe2bdfca8bce5aff9d0b8f11a148d3c295e6d625a2c5d8fb69cf5 WHIRLPOOL a0734f91975be35c0a14b73244b7247e9d02b0adb1b8fb07140c80c125726454d71acb67337458e27eeafa0a35a6c74e6e5445c43ababfccbdd43eace6de9a8b
+EBUILD dhcpcd-6.9.0.ebuild 3446 SHA256 05e324953a22e9106b0e2d2010e85270dfae32a5b45cb8512b745d0bf74be484 SHA512 16b265db08e3dda48cef6580641a0f7806c1f7930e42492a37a948dc7aa23eb26294dddb2757481d632aa8b35817b27dfeb75a847aaa2a19556abbed98435b56 WHIRLPOOL 41460c451a6640ab676a7d4b173a3a2a67b473ec511ae99e5b5b8537002573bc88e95eb7ec38527bd18135d27feb214d056102b462957857f4693e521812af3d
 EBUILD dhcpcd-9999.ebuild 3446 SHA256 d34c08565121508ca1b0fa71705dc4850c820cee9c6a89a8726c7e9d2b0158e6 SHA512 e267c4a6aac40f72dfcae2a5118b247449fdc6613a8ed2338edafa7195537153ea05c23eefb64006636894ee815b6fdea8a7b3e6c6d87534e4827a813b31b493 WHIRLPOOL 5e19a1ec77667ce044f3fa97c11fd446e4de786d88110f5ec594ff0230be25788e67f028e90c4450d01c9054d272f8b950b194ce95da582e5ba512e44bd7ed8c
-MISC ChangeLog 63394 SHA256 7f2ecbed1105ef3a748e2185ea38594fec57535bd08cbd82e274aef52ff8d31b SHA512 0296678195c89dc251a98a7549ac542c53c0370ccc8ffa36975331a25e1cc35a2eda07fdcad0a2fcaad40b2a3dd0c3704a88a531d7a0d0848e637e59b8f58695 WHIRLPOOL c23bda22c0fcd772e525018163fa9c0ba315f6c489061800ae1964a85d53d4a85d029d2d2adbea9f2050ac2570d8bdb7f90bc9a1cdeb2cbd7c8f9a3924dc5ee3
+MISC ChangeLog 63512 SHA256 931e4268dc28efb09fc0307091c36828ecadef901bed8375b3504e4cf983988b SHA512 0dd6dc27e67c0f6192f754dc310c5fdb912194a21a265c8aaca116909bface2c8038c526f147f7f27ca9a9c8e9bbbec0fa4a4825f5d65e8d67f6727508b7c19e WHIRLPOOL f43e8b5d5b980cb6ea6e65a17a71b2572bf612c8be4fad6327e0e2dc0a969c6c14ef9fc54ae52488b73ac547cda57355821244e84390c12093f41a37e9aec5f1
 MISC metadata.xml 467 SHA256 91b68a773dadc21672f7caea36dea4881b2345bd181df980deedd2fa109da021 SHA512 0f693eda66de5e8b4deecdaa722a9dfeb4b528a665b5488bb5d4a3a002094de0be1f9e48378051040174e98d884327d936d3191fa13a4263ddd19f1ed088bc06 WHIRLPOOL ced605f59979086352451940b6d8517efa7cafb9b080369bd8237f3b418e4bdfae3d4cd9c6f7ce051a4f906e09f0fc3777cee65ffbae5bcdadf638fc1c422c2d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVIw5cACgkQblQW9DDEZTiXUACgu3tXN/x3t165cOTWk0zCYtCP
-E5gAoKrFZapiTXbM3d5Sly4gjZ7UaePu
-=DJY6
+iEYEAREIAAYFAlVX0XwACgkQblQW9DDEZThGnACePj7MpWUvJ0YvQ79jY9Zn9HaV
+Tr0An1Fyg8vveRgCWl9Z+ZqootfyANo0
+=Ig/n
 -----END PGP SIGNATURE-----
